06/12/2008: v2.3.1
	- updated Chinese translations
	- updated Romanian translation
	- added Multiple tables for leagues feature
	- added joined leagues feature (think conferences in US sports)
	- Solved some minor bugs

06/11/2008: v2.3.0
	- added flag for Montenegro (thanks to Mihai Floran)
	- added definitions for a European Union League (thanks to Mihai Floran)
	- added new short leagues (thanks to Mihai Floran)
	- added definitions for Hungary (thanks to Mihai Floran)
	- added definitions for Russia (thanks to Mihai Floran)
	- added definitions for Portugal (thanks to Mihai Floran)
	- added definitions for Austria (thanks to Mihai Floran)
	- added definitions for Ukraine (thanks to Mihai Floran)
	- added definitions for Moldova (thanks to Mihai Floran)
	- added league commentary for Italy (thanks to Basilio Silvio Greco)
	- added league commentary for Romania (thanks to Mihai Floran)
	- added Romanian hints (thanks to Mihai Floran)
	- added updated definitions for Romania (thanks to Mihai Floran)
	- fixed a problem with the Youth Academy preference
	- added player balking during transfers
	- added ticket prices for the stadium
	- added variable interest rate for loans
	- added automatic loan repayment
	- fixed next opponent display bug on Mac
	- update french translation (thanks to Marc Schneider)


3/02/2008: v2.2.1
	- added new pictures (thanks to Michael Duecker)
	- deleted old pictures
	- added Italian hints (thanks to Basilio Silvio Greco)
	- updated Italian translation (thanks to Basilio Silvio Greco)
	- added definitions for Peru (thanks to Ivan Ramirez)
	- updated French translation (thanks to Marc Schneider)
	- updated French live game commentary file (thanks to Marc Schneider)
	- added definitions for a FIFA league (thanks to Ivan Ramirez)
	- added player names for Peru (thanks to Ivan Ramirez)
	- added player names for Czech Republic (thanks to Pavel Pulpan)
	- added flag for Czech Republic (thanks to Pavel Pulpan)